Added change to make symmetric circuit in jupyter revision version

--- a/Probability_Amplitude_Swapping_Implementation_Revise.ipynb
+++ b/Probability_Amplitude_Swapping_Implementation_Revise.ipynb
@@ -151,7 +151,7 @@
     "        zeroBits = []\n",
     "\n",
     "        # Step 1 applying CNOT gate to every different bits between 2 bitstrings from i to n\n",
-    "        for j in range(i+1, n):\n",
+    "        for j in range(n-1, i, -1):\n",
     "        #     If jth bit of x and y is different\n",
     "        #     then apply CNOT gate from i to j\n",
     "            if getBit(x, n-j-1) != getBit(y, n-j-1):\n",
@@ -159,6 +159,7 @@
     "                diffBits.append(j)\n",
     "        #         Add CNOT gate to the circuit\n",
     "                circ.cx(i, j)\n",
+    "                circ.barrier()\n",
     "        #         Flip the bit conresponding to CNOT gate in bitstring of x and y the make use in the next operations\n",
     "                if getBit(x, n-i-1) != 0:\n",
     "                    x = flipBit(x, n-j-1)\n",
@@ -200,7 +201,8 @@
     "            y = flipBit(y, n-l-1)\n",
     "\n",
     "        # Step 3.2 repeating Step 1\n",
-    "        for g in diffBits:\n",
+    "        for g in diffBits[::-1]:\n",
+    "            circ.barrier()\n",
     "            circ.cx(i, g)\n",
     "            if getBit(x, n-i-1) != 0:\n",
     "                x = flipBit(x, n-g-1)\n",
